--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="about-image">
                     <div class="about-profile-wrapper">
                         <img 
-                            src="https://media.licdn.com/dms/image/v2/D4D03AQEh6FuRysl-jA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1715332296599" 
+                            src="https://media.licdn.com/dms/image/v2/D4D03AQEh6FuRysl-jA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1715332296599?e=1769644800&v=beta&t=vgNAXcFQnny8qdlb7vbo_pGGwkKaz04O-trHqBn2he8" 
                             alt="Minhazul Islam Shuvo" 
                             class="about-profile-img"
                         >
@@ -266,7 +266,7 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">2022 - Present</div>
+                        <div class="timeline-date">2023 - Present</div>
                         <h3 class="timeline-title">Bachelor of Science in Computer Science & Engineering</h3>
                         <p class="timeline-subtitle">United International University (UIU)</p>
                         <p class="timeline-status">Currently in 7th Trimester</p>
