Add alt attribute to profile image

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="profile-image-wrapper">
                         <img 
                             src="https://media.licdn.com/dms/image/v2/D4D03AQEh6FuRysl-jA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1715332296599?e=1769644800&v=beta&t=vgNAXcFQnny8qdlb7vbo_pGGwkKaz04O-trHqBn2he8" 
-                            
+                            alt="Minhazul Islam Shuvo" 
                             class="profile-img"
                         >
                     </div>
