--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     Passionate Computer Science student at UIU with strong foundation in algorithms, data structures, and software development. Currently exploring AI and database systems.
                 </p>
                 <div class="hero-buttons">
-                    <a href="Minhazul_Islam_Shuvo_CV.pdf" download class="btn btn-primary">
+                    <a href="Minhazul-Islam-Shuvo-.pdf" download class="btn btn-primary">
                         <svg class="btn-icon" viewBox="0 0 24 24" width="20" height="20">
                             <path fill="currentColor" d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
                         </svg>
@@ -379,7 +379,7 @@
                             <span>GitHub</span>
                         </a>
                     </div>
-                    <a href="Minhazul_Islam_Shuvo_CV.pdf" download class="btn btn-primary btn-download">
+                    <a href="Minhazul-Islam-Shuvo-.pdf" download class="btn btn-primary btn-download">
                         <svg class="btn-icon" viewBox="0 0 24 24" width="20" height="20">
                             <path fill="currentColor" d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
                         </svg>
